<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PainSurveyActivity">

    <TextView
        android:id="@+id/painSurveyTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/pain_survey_title"
        android:textColor="#1A4881"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/q1LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/painSurveyTitleTextView"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/pain_survey_question_1"
            android:textColor="#1A4881"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="26dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q1MildPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/mild_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q1DiscomfortingPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/discomforting_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q1DistressingPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/distressing_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q1HorriblePainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/horrible_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q1ExcruciatingPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/excruciating_pain_response"
                android:textColor="#396BAE" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/q2LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/q1LinearLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/pain_survey_question_2"
            android:textColor="#1A4881"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="26dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q2MildPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/mild_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q2DiscomfortingPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/discomforting_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q2DistressingPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/distressing_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q2HorriblePainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/horrible_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q2ExcruciatingPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/excruciating_pain_response"
                android:textColor="#396BAE" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/q3LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/q2LinearLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/pain_survey_question_3"
            android:textColor="#1A4881"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="26dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q3MildPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/mild_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q3DiscomfortingPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/discomforting_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q3DistressingPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/distressing_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q3HorriblePainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/horrible_pain_response"
                android:textColor="#396BAE" />

            <RadioButton
                android:id="@+id/q3ExcruciatingPainRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/excruciating_pain_response"
                android:textColor="#396BAE" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/pain_survey_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/pain_survey_submit_button_label"
        android:onClick="submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q3LinearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>