<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyRecordsActivity">

    <TextView
        android:id="@+id/survey_records_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/survey_records_title"
        android:textColor="#1A4881"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PAM_record_title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/PAM_record_title"
        android:textColor="#1A4881"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/survey_records_title_textView"
        tools:layout_editor_absoluteX="8dp" />

    <ImageView
        android:id="@+id/PAM_record_imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="8dp"

        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PAM_record_title_textView" />

    <TextView
        android:id="@+id/PAM_record_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textColor="#396BAE"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/PAM_record_imageView"
        app:layout_constraintTop_toBottomOf="@id/PAM_record_imageView" />

    <LinearLayout
        android:id="@+id/pain_record_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/PAM_record_time_textView">

        <TextView
            android:id="@+id/pain_record_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="6dp"
            android:text="@string/pain_record_title"
            android:textColor="#1A4881"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/pain_response_1_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pain_response_1_question_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pain_survey_question_1"
                android:textColor="#396BAE"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pain_response_1_answer_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#1A4881"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/pain_response_2_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pain_response_2_question_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pain_survey_question_2"
                android:textColor="#396BAE"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pain_response_2_answer_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#1A4881"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pain_response_3_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pain_response_3_question_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pain_survey_question_3"
                android:textColor="#396BAE"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pain_response_3_answer_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#1A4881"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/pain_record_time_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="4dp"
            android:textColor="#396BAE"
            android:textStyle="italic" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>